--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
 </head>
 <body>
     <main>
+        <!-- Banner section -->
         <div class="banner">
             <img src="images/Banner Image.png" alt="">
             <div class="new-year-title">
                 <h3 class="new-year">Happy New Year</h3>
                 <p class="new-year-party">New Year Party Celebration</p>
+            </div>
+        </div>
+        <!-- Discount Section -->
+        <div class="discount">
+            <div class="discount-title">
+                <h1 class="discount-title-one">65% OFF</h1>
+                <h3 class="discount-title-two">OUR HOLIDAY DEALS ARE BETTER</h3>
+                <h2 class="discount-three">ALL CATEGORIES</h2>
+            </div>
+            <div class="discount-image">
+                <img src="images/New Year Photo.png" alt="">
             </div>
         </div>
     </main>
