--- a/index.html
+++ b/index.html
@@ -56,7 +56,23 @@
                 </div>
         </div>
 
-        
+        <!-- Comming-Soon-Portion -->
+        <div class="comming-soon">
+            <div class="best-offer">
+                <h3 class="best-offer-title">NEW BEST OFFER</h3>
+                <h2 class="comming-soon-title">Coming Soon</h2>
+                <p class="best-offer-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="red-image">
+                <img src="images/Ellipse 1.png" alt="">
+            </div>
+            <div class="twenty-four">
+                <h2 class="twenty-four-title">2024</h2>
+                <p class="twenty-four-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img src="images/Group 96.png" alt="">
+            </div>
+
+        </div>
         
     </main>
     <footer>
