--- a/index.html
+++ b/index.html
@@ -73,7 +73,23 @@
             </div>
 
         </div>
-        
+         <!-- Grid Section -->
+         <div class="grid-section">
+            <div class="grid-content">
+                <h2 class="grid-title">THE BEST GIFTS</h2>
+                <h1 class="grid-title-two">Our Awesome Portfolio</h1>
+                <p class="grid-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="grid-container">
+                <div class="grid-item"><img src="images/Rectangle 3.png" alt=""></div>
+                <div class="grid-item"><img src="images/Rectangle 4.png" alt=""></div>
+                <div class="grid-item"><img src="images/Rectangle 5.png" alt=""></div>
+                <div class="grid-item"><img src="images/Rectangle 6.png" alt=""></div>
+                <div class="grid-item"><img src="images/Rectangle 7.png" alt=""></div>
+                <div class="grid-item"><img src="images/Rectangle 8.png" alt=""></div>
+
+            </div>
+         </div>
     </main>
     <footer>
 
