subscriber portion done

--- a/index.html
+++ b/index.html
@@ -75,21 +75,35 @@
         </div>
          <!-- Grid Section -->
          <div class="grid-section">
-            <div class="grid-content">
-                <h2 class="grid-title">THE BEST GIFTS</h2>
-                <h1 class="grid-title-two">Our Awesome Portfolio</h1>
-                <p class="grid-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-            </div>
-            <div class="grid-container">
-                <div class="grid-item"><img src="images/Rectangle 3.png" alt=""></div>
-                <div class="grid-item"><img src="images/Rectangle 4.png" alt=""></div>
-                <div class="grid-item"><img src="images/Rectangle 5.png" alt=""></div>
-                <div class="grid-item"><img src="images/Rectangle 6.png" alt=""></div>
-                <div class="grid-item"><img src="images/Rectangle 7.png" alt=""></div>
-                <div class="grid-item"><img src="images/Rectangle 8.png" alt=""></div>
+                <div class="grid-content">
+                    <h2 class="grid-title">THE BEST GIFTS</h2>
+                    <h1 class="grid-title-two">Our Awesome Portfolio</h1>
+                    <p class="grid-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                </div>
+                <div class="grid-container">
+                    <div class="grid-item"><img src="images/Rectangle 3.png" alt=""></div>
+                    <div class="grid-item"><img src="images/Rectangle 4.png" alt=""></div>
+                    <div class="grid-item"><img src="images/Rectangle 5.png" alt=""></div>
+                    <div class="grid-item"><img src="images/Rectangle 6.png" alt=""></div>
+                    <div class="grid-item"><img src="images/Rectangle 7.png" alt=""></div>
+                    <div class="grid-item"><img src="images/Rectangle 8.png" alt=""></div>
 
-            </div>
+                </div>
          </div>
+
+         <!-- Subscribe-Section -->
+         <div class="subscribe-section">
+            <div class="subscriber-content">
+                <img src="images/Group 61.png" alt="" class="sebscriber-image">
+                <h1 class="subscriber-title">Subscribe Newsletter</h1>
+                <p class="subscriber-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                
+                <input class="subscribe-input" type="text" name="" id=""><button class="subscribe-button">Subscribe</button>
+            </div>
+
+            
+         </div>
+
     </main>
     <footer>
 
