--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    
     <link rel="stylesheet" href="Styles/style.css">
     <title>Happy New Year 2024</title>
 </head>
@@ -111,7 +112,7 @@
             <div class="footer-content">
                 <p>44, Big Building Roosevelt Street
                     Beach Gardens Florida 33410</p>
-                    <p>+00 123 584 124 <br>www.website.com</p>
+                    <p> <img src="images/Call.png" alt="">+00 123 584 124 <br> <img src="images/Website.png" alt="">www.website.com</p>
                     
 
             </div>
